[gd_scene load_steps=9 format=3 uid="uid://dhmn0dbohss1t"]

[ext_resource type="Texture2D" uid="uid://0iobvmuxxfy8" path="res://assets/background.jpeg" id="1_gvk52"]
[ext_resource type="Script" uid="uid://do7qj76cjwm0f" path="res://main-menu/main_menu.gd" id="1_mue8r"]
[ext_resource type="FontFile" uid="uid://7txsortuvbc4" path="res://assets/font/ZEN.TTF" id="2_j3jwc"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_j3jwc"]
texture = ExtResource("1_gvk52")
modulate_color = Color(0.641934, 0.641934, 0.641934, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j3jwc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j3jwc"]
bg_color = Color(0.650128, 0.650128, 0.650128, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mue8r"]
bg_color = Color(0.288518, 0.288518, 0.288518, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4thvv"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="Main-menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -3.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mue8r")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_j3jwc")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -157.0
offset_top = -34.0
offset_right = 159.0
offset_bottom = 176.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="New-Game" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_j3jwc")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_j3jwc")
theme_override_styles/hover = SubResource("StyleBoxFlat_j3jwc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mue8r")
theme_override_styles/normal = SubResource("StyleBoxFlat_4thvv")
text = "New game"

[node name="Settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_j3jwc")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_j3jwc")
theme_override_styles/hover = SubResource("StyleBoxFlat_j3jwc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mue8r")
theme_override_styles/normal = SubResource("StyleBoxFlat_4thvv")
text = "Settings"

[node name="Credits" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_j3jwc")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_j3jwc")
theme_override_styles/hover = SubResource("StyleBoxFlat_j3jwc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mue8r")
theme_override_styles/normal = SubResource("StyleBoxFlat_4thvv")
text = "Credits"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -197.5
offset_top = -172.0
offset_right = 197.5
offset_bottom = -76.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_j3jwc")
theme_override_font_sizes/font_size = 70
text = "Lotus Blade"

[connection signal="pressed" from="VBoxContainer/New-Game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="VBoxContainer/New-Game" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_credits_pressed"]
